GUI/Results/Spectre/Row-Hammer_Attack_0228-123432/gcc.txt
Row-Hammer_Attack_0228-123432/faddp1120Out.c: In function ‘readMemoryByte’:
Row-Hammer_Attack_0228-123432/faddp1120Out.c:51:17: error: ‘a’ undeclared (first use in this function)
   51 |         : "=m" (a)
      |                 ^
Row-Hammer_Attack_0228-123432/faddp1120Out.c:51:17: note: each undeclared identifier is reported only once for each function it appears in
Row-Hammer_Attack_0228-123432/faddp1120Out.c:52:25: error: ‘b’ undeclared (first use in this function)
   52 |         : "m" (a), "m" (b)
      |                         ^
Row-Hammer_Attack_0228-123432/faddp1120Out.c:46:9: error: invalid lvalue in asm output 0
   46 |         __asm__ (
      |         ^~~~~~~
Row-Hammer_Attack_0228-123432/faddp1120Out.c:46:9: error: memory input 1 is not directly addressable
Row-Hammer_Attack_0228-123432/faddp1120Out.c:46:9: error: memory input 2 is not directly addressable
